Addon screen GL nvidia driver crash fix, ConsoleScreen additions